# termnews

./: Cargo.toml  README.md  saved_news.md
.github/workflows/: publish.yml  release.yml
src/: main.rs
~/.config/: termnews.toml
